# OpenVoiceInput

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: architecture.md  backend-boundary.md  getting-started.md  model-benchmark-results.md  model-selection.md  privacy.md  quick-note-keyword-examples.md  reference-project-cheatsheet.md  reference-project-comparison.md  reference-project-shortlist.md  release-notes-v0.1.0-test.5.md  requirements.md  troubleshooting.md
experiments/qwen3-asr-0.6b/: sample-zh.txt
experiments/text-postprocess-models/: eval-set.jsonl  models.json  run_eval.py  smoke-polish-prompt.txt
scripts/: build-test-package.ps1
src/local_voice_input/: __init__.py  api_context.py  api_provider.py  app.py  asr.py  audio_capture.py  backends.py  benchmark.py  cli.py  config.py  diagnostics.py  gui.py  hotkey.py  model_download.py  model_selector.py  quick_note.py  remote_asr_backend.py  sherpa_backend.py  subtitles.py  text_output.py  usage_log.py  windows_clipboard.py  windows_entry.py
tests/: test_api_context.py  test_api_provider.py  test_app_framework.py  test_audio_capture.py  test_benchmark.py  test_bootstrap.py  test_cli.py  test_diagnostics.py  test_gui.py  test_hotkey.py  test_model_download.py  test_model_selector.py  test_quick_note.py  test_remote_asr_backend.py  test_sherpa_backend.py  test_subtitles.py  test_text_output.py  test_usage_log.py  test_windows_entry.py
